# OOP

./: README.md
assignments/a1/: a1.c
assignments/a2/: main.c
assignments/a2-emtreila/domain/: Estate.c  Estate.h
assignments/a2-emtreila/repository/: Repo.h
assignments/a2-emtreila/service/: Service.c
assignments/a2-emtreila/tests/: test_repo.h  test_service.c  test_service.h
assignments/a2-emtreila/ui/: Ui.h
assignments/a2-emtreila/undo_redo/: UndoRedoCommand.c  UndoRedoCommand.h
assignments/a2/repository/: Repo.c
assignments/a2/service/: Service.h
assignments/a6-7/: coats_data.txt  main.cpp
assignments/a8-9/: ChartWindow.h  main.cpp
assignments/a8-9-emtreila/: ChartWindow.cpp
exams & tests/final exam/: CMakeLists.txt  Idea.cpp  Idea.h  IdeaTableModel.cpp  IdeaTableModel.h  Informatica  Repo.cpp  Repo.h  Researcher.cpp  Researcher.h  Service.cpp  Service.h  accepted_ideas.txt  data_idea.txt  data_researcher.txt  main.cpp  researcherwindow.cpp  researcherwindow.h  researcherwindow.ui  titlu
exams & tests/tests/t1-emtreila/: CMakeLists.txt  DynamicVector.h  main.cpp
exams & tests/tests/t1-emtreila/domain/: School.cpp  School.h
exams & tests/tests/t1-emtreila/repository/: Repo.cpp  Repo.h
exams & tests/tests/t1-emtreila/service/: Service.cpp  Service.h
exams & tests/tests/t1-emtreila/tests/: Tests.cpp  Tests.h
exams & tests/tests/t1-emtreila/ui/: Ui.cpp  Ui.h
exams & tests/tests/t2-emtreila/: CMakeLists.txt  Car.cpp  Car.h  ElectricEngine.cpp  ElectricEngine.h  Engine.cpp  Engine.h  Service.cpp  Service.h  TurboEngine.cpp  TurboEngine.h  Ui.cpp  Ui.h  main.cpp
practice/practice-exam/art/: CMakeLists.txt  Item.cpp  Item.h  Observable.h  Observer.cpp  Observer.h  Repo.cpp  Repo.h  Service.cpp  Service.h  User.cpp  User.h  data_item.txt  data_user.txt  main.cpp  userwindow.cpp  userwindow.h  userwindow.ui
practice/practice-exam/microbial/: BacteriaTableModel.cpp  BacteriaTableModel.h  Bacterium.cpp  Bacterium.h  Biologist.cpp  Biologist.h  CMakeLists.txt  Repo.cpp  Repo.h  Service.cpp  Service.h  VisualView.cpp  VisualView.h  biologistwindow.cpp  biologistwindow.h  biologistwindow.ui  data_bacteria.txt  data_biologist.txt  main.cpp
practice/practice-exam/star/: Astronomer.cpp  Astronomer.h  AstronomerTableModel.cpp  AstronomerTableModel.h  CMakeLists.txt  Repo.cpp  Repo.h  Service.cpp  Service.h  Star.cpp  Star.h  astronomerwindow.cpp  astronomerwindow.h  astronomerwindow.ui  data_astronomer.txt  data_star.txt  main.cpp  sorted_stars.txt
practice/practice-test1/assignment/: CMakeLists.txt  DynamicVector.h  assignments.txt  main.cpp
practice/practice-test1/assignment/domain/: Assignment.cpp  Assignment.h
practice/practice-test1/assignment/repository/: Repo.cpp  Repo.h
practice/practice-test1/assignment/service/: Service.cpp  Service.h
practice/practice-test1/assignment/tests/: Tests.h
practice/practice-test1/assignment/ui/: Ui.cpp  Ui.h
practice/practice-test1/car/: CMakeLists.txt  main.cpp
practice/practice-test1/car/domain/: Car.cpp  Car.h
practice/practice-test1/car/repository/: Repo.cpp  Repo.h
practice/practice-test1/car/service/: Service.cpp  Service.h
practice/practice-test1/car/tests/: Tests.cpp  Tests.h
practice/practice-test1/car/ui/: Ui.cpp  Ui.h
practice/practice-test1/protein/: CMakeLists.txt  main.cpp
practice/practice-test1/protein/domain/: Protein.cpp  Protein.h
practice/practice-test1/protein/repository/: Repo.cpp  Repo.h
practice/practice-test1/protein/service/: Service.cpp  Service.h
practice/practice-test1/protein/tests/: Tests.cpp  Tests.h
practice/practice-test1/protein/ui/: Ui.cpp  Ui.h
practice/practice-test1/school/: CMakeLists.txt  DynamicVector.h  main.cpp
practice/practice-test1/school/domain/: School.cpp  School.h
practice/practice-test1/school/repository/: Repo.cpp  Repo.h
practice/practice-test1/school/service/: Service.cpp  Service.h
practice/practice-test1/school/tests/: Tests.cpp  Tests.h
practice/practice-test1/school/ui/: Ui.cpp  Ui.h
practice/practice-test1/task/: CMakeLists.txt  main.cpp
practice/practice-test1/task/domain/: Task.cpp  Task.h
practice/practice-test1/task/repository/: Repo.cpp  Repo.h
practice/practice-test1/task/service/: Service.cpp  Service.h
practice/practice-test1/task/tests/: Tests.cpp  Tests.h
practice/practice-test1/task/ui/: Ui.cpp  Ui.h
practice/practice-test1/topScore/: CMakeLists.txt  main.cpp
practice/practice-test1/topScore/domain/: Scorer.cpp  Scorer.h
practice/practice-test1/topScore/repository/: Repo.cpp  Repo.h
practice/practice-test1/topScore/service/: Service.cpp  Service.h
practice/practice-test1/topScore/tests/: Tests.cpp  Tests.h
practice/practice-test1/topScore/ui/: Ui.cpp  Ui.h
practice/practice-test2/appliances/: Appliance.cpp  Appliance.h  CMakeLists.txt  DishWasher.cpp  DishWasher.h  Refrigerator.cpp  Refrigerator.h  Service.cpp  Service.h  Ui.cpp  Ui.h  main.cpp  test1.txt
practice/practice-test2/buildings/: Block.cpp  Block.h  Building.cpp  Building.h  CMakeLists.txt  Controller.cpp  Controller.h  House.cpp  House.h  Tests.cpp  Tests.h  Ui.cpp  Ui.h  buildings_to_be_demolished.txt  main.cpp
practice/practice-test2/hospital/: CMakeLists.txt  Controller.cpp  Controller.h  HospitalDepartment.cpp  HospitalDepartment.h  NeonatalUnit.cpp  NeonatalUnit.h  Surgery.cpp  Surgery.h  Ui.cpp  Ui.h  main.cpp  test1.txt
practice/practice-test2/medical/: BMI.cpp  BMI.h  BP.cpp  BP.h  CMakeLists.txt  MedicalAnalysis.cpp  MedicalAnalysis.h  Person.cpp  Person.h  Service.cpp  Service.h  Ui.cpp  Ui.h  main.cpp  test1.txt
practice/practice-test3/car/: CMakeLists.txt  Car.cpp  Car.h  Repo.cpp  Repo.h  Service.cpp  Service.h  Test.cpp  Test.h  car_data.txt  gui.cpp  gui.h  gui.ui
practice/practice-test3/equation/: CMakeLists.txt  Equation.cpp  Equation.h  Repo.cpp  Repo.h  Service.cpp  Service.h  gui.cpp  gui.h  gui.ui  main.cpp
practice/practice-test3/shoppingList/: CMakeLists.txt  Item.cpp  Item.h  Repo.cpp  Repo.h  Service.cpp  Service.h  data.txt  gui.cpp  gui.h  gui.ui  main.cpp
(+134 files in other folders)
